align vertical timeline single column left and fix sizing

--- a/src/pages/Resume/Resume2.module.css
+++ b/src/pages/Resume/Resume2.module.css
@@ -90,7 +90,7 @@ h3 {
   }
 
   .gridContainer {
-    width: 80%;
+    width: 70%;
   }
 }
 
